5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4350/executions/1596_842.log
== SUBMITION (2019-03-31 20:25:27) 
-- CODE:
int main()
{
  int num,soma;
  scanf("%d",&num);
  soma=0;

  while(num>0)
  {
    soma+=num%10;
    num/=10;
  }

  printf("%d\n",soma);

  return 0;
}
-- EXECUTION TIME:
0.204341
-- ERROR:
  File "/home/codebench/codes/1596/842/main.py", line 1
    int main()
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:25:31) 
-- CODE:
int main()
{
  int num,soma;
  scanf("%d",&num);
  soma=0;

  while(num>0)
  {
    soma+=num%10;
    num/=10;
  }

  printf("%d\n",soma);

  return 0;
}
-- ERROR:
File "XXXX", line 1
    int main()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:28:10) 
-- CODE:
n = int(input("Digite um número inteiro: "))
resto = n % 10
n = (n - resto)/10
soma = soma + resto
print("A soma dos números é: ", n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma = soma + resto
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:28:39) 
-- CODE:
n = int(input("Digite um número inteiro: "))
resto = n%10
n = (n - resto)/10
soma = soma + resto
print("A soma dos números é: ", n)
-- EXECUTION TIME:
0.153082
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    soma = soma + resto
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:28:41) 
-- CODE:
n = int(input("Digite um número inteiro: "))
resto = n%10
n = (n - resto)/10
soma = soma + resto
print("A soma dos números é: ", n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma = soma + resto
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:29:10) 
-- CODE:
n = int(input("a"))
resto = n%10
n = (n - resto)/10
soma = soma + resto
print("dd", n)
-- EXECUTION TIME:
0.151179
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/842/main.py", line 4, in <module>
    soma = soma + resto
NameError: name 'soma' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:29:12) 
-- CODE:
n = int(input("a"))
resto = n%10
n = (n - resto)/10
soma = soma + resto
print("dd", n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma = soma + resto
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:29:55) 
-- CODE:
n = int(input("a"))
resto = n%10
n = (n - resto)/10
print(n)
-- EXECUTION TIME:
0.143529
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
a917.0
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
a101.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:29:56) 
-- CODE:
n = int(input("a"))
resto = n%10
n = (n - resto)/10
print(n)
-- OUTPUT:
917.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:30:32) 
-- CODE:
n = int(input("a"))
resto = n%10
d = (n - resto)/10
print(d)
-- OUTPUT:
917.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:31:17) 
-- CODE:
n = input("Digite um número inteiro: ")

print(sum(int(i) for i in n))
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 20:31:50) 
-- CODE:
x = int(input("Numero: "))

soma = 0

while (x != 0):
    resto = x % 10
    x = (x - resto)//10
    soma = soma + resto
print(soma)
-- OUTPUT:
20
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 20:32:00) 
-- CODE:
x = int(input("Numero: "))

soma = 0

while (x != 0):
    resto = x % 10
    x = (x - resto)//10
    soma = soma + resto
print(soma)
-- EXECUTION TIME:
0.164156
-- TEST CASE 1:
---- input:
9173
---- correct output:
20
---- user output:
20
-- TEST CASE 2:
---- input:
1010
---- correct output:
2
---- user output:
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
